@@ -89,21 +89,25 @@ class CompojoomImage extends JImage
 				// Let's try to keep up the orientation of the image
 				// Setting memory_limit that high, because with bigger images rotating fails often
 				ini_set('memory_limit', '256M');
-				$exif = @exif_read_data($this->getPath());
 
-				if (!empty($exif['Orientation']))
+				if (function_exists('exif_read_data'))
 				{
-					switch ($exif['Orientation'])
+					$exif = @exif_read_data($this->getPath());
+
+					if (!empty($exif['Orientation']))
 					{
-						case 8:
-							$thumb->rotate(90, 0, false);
-							break;
-						case 3:
-							$thumb->rotate(180, 0, false);
-							break;
-						case 6:
-							$thumb->rotate(-90, 0, false);
-							break;
+						switch ($exif['Orientation'])
+						{
+							case 8:
+								$thumb->rotate(90, 0, false);
+								break;
+							case 3:
+								$thumb->rotate(180, 0, false);
+								break;
+							case 6:
+								$thumb->rotate(-90, 0, false);
+								break;
+						}
 					}
 				}
 
